selfhost/tests/neg/cmpmismatch.ail
// EXPECT: comparing str and i64
x := "a"
b := x == 5
println(b)
